--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "firebase": "^9.9.4",
     "vue": "^2.6.14",
+    "vue-croppa": "^1.3.8",
     "vue-router": "^3.5.1"
   },
   "devDependencies": {
