--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "bootstrap": "^5.2.1",
+    "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
     "firebase": "^9.9.4",
     "moment": "^2.29.4",
-    "vue": "^2.6.14",
+    "vue": "^2.7.10",
     "vue-croppa": "^1.3.8",
     "vue-router": "^3.5.1"
   },
